@@ -1,3 +1,10 @@
+2004-03-08  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/14401
+	* g++.dg/init/ctor3.C: New test.
+	* g++.dg/init/union1.C: New test.
+	* g++.dg/ext/anon-struct4.C: New test.
+
 2004-03-08  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.c-torture/execute/20040307-1.c: New test case.
